# Stream-HLS

./: EXTRA_INSTRUCTIONS.md  build-llvm.sh  build-poly.sh  build-streamhls.sh  setup-env.sh
examples/: data.py  gen_mlir_designs.py  run_streamhls.py  streamhls_pipeline.py
examples/pymodels/LLM/: Inference2.py  MultiHeadSelfAttentionKV.py  Transformer.py  TransformerKV.py
examples/pymodels/mlps/: Decoder.py  DenseDecoder.py
examples/pymodels/test_bitnet/: BitFeedForward.py  BitLinear.py  BitMGQA.py  BitNetTransformer.py  SimpleRMSNorm.py
examples/pymodels/transformers/: BIT_TRANSFORMER_FIXES.md  MultiHeadSelfAttention.py  bit_attention.py
include/streamhls/Support/: Utils.h
include/streamhls/Transforms/: Passes.h  Passes.td
lib/: Passes.cpp
lib/Support/: CMakeLists.txt  DFG.cpp  Utils.cpp
lib/Transforms/: CreateWeightBins.cpp  OperationBlackbox.cpp
lib/Translation/: EmitVivadoHLS.cpp
